--- a/templates/login.html
+++ b/templates/login.html
@@ -21,7 +21,7 @@
   {% include "header.html" %}
 
 <h1>Sign In</h>
-<h2>Please sigh in with your Google account:</h2>
+<h2>Please sign in with your Google account:</h2>
   <p></p>
 
 <button class='btn' id="signinButton">Google Sign-in</button>
