--- a/templates/add_book.html
+++ b/templates/add_book.html
@@ -12,13 +12,13 @@
 
     <form action='#' method='POST'>
       <p>Title:</p>
-      <input type='text' size='30' name='title' placeholder='New Book Title'>
+      <input type='text' size='30' name='title' placeholder='New Book Title' required>
       <p>Author:</p>
-      <input type='text' size='30' name='author' placeholder='Author Name'>
+      <input type='text' size='30' name='author' placeholder='Author Name' required>
       <p>Genre:</p>
-      <input type='text' size='30' name='genre' placeholder='Genre'>
+      <input type='text' size='30' name='genre' placeholder='Genre' required>
       <p>Summary:</p>
-      <input type='text' size='60' name='summary' placeholder='Summary'>
+      <input type='text' size='60' name='summary' placeholder='Summary' required>
       <br>
       <p></p>
       <input class="btn" type='submit' value="Create">
