--- a/templates/add_patron.html
+++ b/templates/add_patron.html
@@ -12,9 +12,9 @@
 
     <form action="#" method='POST'>
       <p>Name:</p>
-      <input type='text' size='30' name='name' placeholder='Patron Name'>
+      <input type='text' size='30' name='name' placeholder='Patron Name' required>
       <p>Email:</p>
-      <input type='text' size='30' name='email' placeholder='Patron Email'>
+      <input type='text' size='30' name='email' placeholder='Patron Email' required>
       <p></p>
       <input class="btn" type='submit' value="Create">
       <a class="btn" href='{{url_for('showPatronList')}}'>Cancel</a>
