--- a/templates/delete_book.html
+++ b/templates/delete_book.html
@@ -9,6 +9,23 @@
     {% block content %}
     {% include "header.html" %}
 
+    <div class='container col-md-12'>
+      <div class="row">
+        <div class="col-md-2 text-right">
+          <div class='flash'>
+            {% with messages = get_flashed_messages() %}
+              {% if messages %}
+                {% for message in messages %}
+                  <strong>{{message}}</strong>
+                {% endfor %}
+              {% endif %}
+            {% endwith %}
+          </div>
+        </div>
+      </div>
+    </div>
+
+
     {% if book.patron_id %}
       <p>This book must be returned before it can be deleted from the system.</p>
     {% endif %}
